--- a/src/views/generations.pug
+++ b/src/views/generations.pug
@@ -13,7 +13,7 @@ block content
                     | Ao todo existem 9 gerações de Pokémons, aqui você encontrará pelo menos 7 delas, cada geração 
                     | corresponde a uma nova região introduzindo novas espécies:
 
-                    ul.mt-3.list-group.col-sm-4
+                    ul.mt-3.list-group.col-lg-5
                         li.list-group-item 
                             a(href="/generation?id=1&limit=151") 1º Geração: Região Kanto
                         li.list-group-item 
