--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,5 +29,10 @@ block content
                             a(href="/types") Tipos
                         li.list-group-item
                             a(href="/moves?offset=0") Movimentos
+                    p.card-text.mt-3 Se você deseja saber mais sobre a aplicação, acesse 
+                        a(href="/about") Sobre
+                        |, caso deseje saber sobre como esta aplicação foi feita, acesse 
+                        a(href="/references") Referências
+                        |. 
 
 
