--- a/src/views/pokemons.pug
+++ b/src/views/pokemons.pug
@@ -21,7 +21,7 @@ block content
                     | para isso, se utilizam diversos atributos para calcular ataques, defesa e efeitos sobre os Pokémons.
                     | Um Pokémon possui os seguintes atributos: 
 
-                    ul.mt-3.list-group.col-sm-8
+                    ul.mt-3.list-group.col-lg-8
                         li.list-group-item 
                             p.mb-0
                                 strong id: 
