--- a/src/views/includes/sidebar.pug
+++ b/src/views/includes/sidebar.pug
@@ -1,4 +1,4 @@
-.d-flex.flex-column.flex-shrink-0.p-3.bg-white(style='width: 280px;')
+.d-flex.flex-column.flex-shrink-0.p-3.bg-white.d-sm-none.d-lg-block(style='width: 280px;')
     a.d-flex.align-items-center.pb-3.link-dark.text-decoration-none(href='/')
         img.me-2.d-sm-none.d-lg-inline(src='/public/images/pokeball.svg', alt='Poquebola', width="24", height="24")
         span.fs-5.fw-semibold Pokédex
@@ -7,7 +7,7 @@
         button.btn.btn-primary(type='submit', id='search-btn')
             i.bi.bi-search
     ul.list-unstyled.ps-0.border-top
-        li.mb-1
+        li.mb-1.mt-2
             ul.btn-toggle-nav.list-unstyled.fw-normal.pb-1.small
                 li
                     a.link-dark.rounded(href='/') Página Inicial
